# micro

./: .clang-format  .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  test.m
cmicro/: CMakeLists.txt
cmicro/include/: codegen.h  error.h  lexer.h  parser.h  typechecker.h
cmicro/src/: codegen.c  error.c  lexer.c  main.c  parser.c
examples/: 00-hello.m  01-math.m
tests/: 00-hello.m
